get reports base of days
